# abacus

./: .coveragerc  .gitignore  README.md  TODO  hatch.toml  pyproject.toml  tox.ini
.github/workflows/: build.yml
abacus/: __init__.py  __main__.py  basic.py  basic_console.py  config.py  console.py  default_shell.py  ipython.py  main.py  main_basic.py  main_ipython.py  shell.py  symbolic_math_provider.py  tokenizer.py  transformer.py
abacus/application/: __init__.py  main.py
abacus/basic_shell/: __init__.py  basic_shell.py  main.py
abacus/default_shell/: __init__.py  __main__.py  default_shell.py  main.py
abacus/extensions/: __init__.py  auto_symbol.py  debug.py  implied_multiplication.py
abacus/extensions/abacus/: __init__.py  abacus.py  magic.py
abacus/extensions/aliases/: __init__.py  aliases.py
abacus/extensions/basic_prompt/: __init__.py  basic_prompt.py
abacus/extensions/inferred_multi/: __init__.py  inferred_multi.py
abacus/ipython/: __init__.py  ipython_console.py
abacus/ipython/aliases/: __init__.py  aliases.py
abacus/ipython_shell/: __init__.py  ipython_shell.py  main.py
abacus/ipython_shell/aliases/: aliases.py
abacus/ipython_shell/prompt/: __init__.py  prompt.py
abacus/ns/: init.pyi
abacus/test/: __init__.py  __main__.py  test_tokenization.py
abacus/transformations/: auto_symbol.py  implied_multiplication.py
abacus/util/: lazy_sympy.py
assets/pyinstaller/: abacus-basic.spec  abacus.spec
docs/: index.html
scripts/: update-version-ci.py
