[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "abacus"

[project]
name = "abacus-icalc"
authors = [
    {name = "Aleksandar Radivojevic", email = "rzhw3h@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Environment :: Console",
    "Framework :: IPython",
]
dynamic = ["version", "description"]
dependencies = [
    "sympy ~= 1.9",
]

[project.optional-dependencies]
full = [
    "ipython ~= 7.21"
]
gui = [
    "pyqt5 ~= 5.15",
]

[project.scripts]
abacus = "abacus.main:main"
abacus-basic = "abacus.main:main_basic"
abacus-ipython = "abacus.main:main_ipython"

[project.urls]
Home = "https://sandorex.github.io/abacus"
Source = "https://github.com/sandorex/abacus"
