[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "abacus-icalc"
authors = [
    {name = "Aleksandar Radivojevic", email = "rzhw3h@gmail.com"}
]
readme = "README.md"
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Environment :: Console",
    "Framework :: IPython",
]
dynamic = ["version"]
requires-python='~=3.8'
dependencies = [
    "sympy ~= 1.9",
]
description = "An interactive algebra calculator built in Python using Python"

[project.optional-dependencies]
ipython = [
    "ipython ~= 7.21",
]

[project.scripts]
abacus = "abacus:main"
abacus-basic = "abacus.basic:main_basic"
abacus-ipython = "abacus.ipython:main_ipython"

[project.urls]
Home = "https://sandorex.github.io/abacus"
Source = "https://github.com/sandorex/abacus"

[tool.black]
line-length = 80
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 80
lines_between_types = 1
